--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lazy-load-webpack-systemjs",
+  "name": "lazy-load-es2015-systemjs",
   "version": "1.0.0",
   "description": "Lazy-loading ES2015 modules in the browser with Webpack, Babel and System.js ",
   "main": "src/main.js",
@@ -9,25 +9,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tiagorg/lazy-load-webpack-systemjs.git"
+    "url": "git+https://github.com/tiagorg/lazy-load-es2015-systemjs.git"
   },
   "author": "Tiago Garcia",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tiagorg/lazy-load-webpack-systemjs/issues"
+    "url": "https://github.com/tiagorg/lazy-load-es2015-systemjs/issues"
   },
-  "homepage": "https://github.com/tiagorg/lazy-load-webpack-systemjs#readme",
+  "homepage": "https://github.com/tiagorg/lazy-load-es2015-systemjs#readme",
+  "jspm": {
+    "dependencies": {
+      "jspm": "npm:jspm@^0.16.23"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
+  },
   "devDependencies": {
-    "babel-core": "^6.4.0",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "chai": "^3.4.1",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-mocha": "^2.2.0",
-    "gulp-util": "^3.0.7",
-    "mocha": "^2.3.4",
-    "webpack": "^1.12.10",
-    "webpack-dev-server": "^1.14.1"
+    "gulp-connect": "^2.3.1"
   }
 }
