--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     }
   },
   "devDependencies": {
+    "babel-core": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "chai": "^3.4.1",
     "gulp": "^3.9.0",
-    "gulp-connect": "^2.3.1"
+    "gulp-connect": "^2.3.1",
+    "gulp-mocha": "^2.2.0"
   }
 }
